--- a/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 23, 2020 by pavroo
+Last update: December 23, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> Terminal Emulators | APTus AppCenter</title>
@@ -85,8 +85,8 @@ Last update: August 23, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://accter_tilda" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilda</a>
 		</td>
-		<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
-		</td>
+		<!--<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
+		</td>-->
 		<td><a href="aptus://accter_xfce4-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xfce4 Terminal</a>
 		</td>
 		<td><a href="aptus://accter_xterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xterm </a>
