--- a/01-yad/lib/sparky-aptus-appcenter/development.html
+++ b/01-yad/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 17, 2020 by pavroo
+Last update: December 23, 2020 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -139,7 +139,7 @@ Last update: December 17, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://devtoo_lyx" class="button1"><img src="images/tex.svg" class="appicon"><br />LyX</a>
 		</td>
-		<td><a href="aptus://devtoo_meld" class="button1"><img src="images/meld.svg" class="appicon"><br />Meld</a>
+		<td><a href="aptus://devtoo_meld" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Meld</a>
 		</td>
 		<td><a href="aptus://devtoo_minizinc" class="button1"><img src="images/default-icon.svg" class="appicon"><br />MiniZinc</a>
 		</td>
