--- a/01-yad/lib/sparky-aptus-appcenter/system-package.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-package.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 21, 2020 by pavroo
+Last update: December 23, 2020 by pavroo
 -->
 	<head>
 		<title>System -> Package Management | APTus AppCenter</title>
@@ -59,25 +59,15 @@ Last update: June 21, 2020 by pavroo
 		</td>
 		<td><a href="aptus://syspac_snapd" class="button1"><img src="images/container.svg" class="appicon"><br />snapd</a>
 		</td>
-		<td><a href="aptus://syspac_sparky-aptus" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />SparkyAPTus</a>
+		<!--<td><a href="aptus://syspac_sparky-aptus" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />SparkyAPTus</a>
 		</td>
 		<td><a href="aptus://syspac_sparky-aptus-appcenter" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />SparkyAPTus AppCenter</a>
-		</td>
+		</td>-->
 		<td><a href="aptus://syspac_sparky-aptus-upgrade" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://syspac_sparky-aptus-upgrade-checker" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade Checker</a>
 		</td>
 		<td><a href="aptus://syspac_synaptic" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />Synaptic</a>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
