--- a/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -55,6 +55,8 @@ Last update: December 23, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://audpla_cmus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Cmus</a>
 		</td>
+		<td><a href="aptus://audpla_cozy" class="button1"><img src="images/audio-headphones.svg" class="appicon"><br />Cozy</a>
+		</td>
 		<td><a href="aptus://audpla_daisy-player" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Daisy Player</a>
 		</td>
 		<td><a href="aptus://audpla_deadbeef" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />DeaDBeeF</a>
@@ -63,10 +65,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_dradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Dradio</a>
 		</td>
-		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
+		</td>
 		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
 		</td>
 		<td><a href="aptus://audpla_gmerlin" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Gmerlin</a>
@@ -77,10 +79,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
 		</td>
-		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
+		</td>
 		<td><a href="aptus://audpla_gxmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GXMMS2</a>
 		</td>
 		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
@@ -91,10 +93,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
 		</td>
-		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
+		</td>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
 		</td>
 		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
@@ -105,10 +107,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
 		</td>
-		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
+		</td>
 		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
 		</td>
 		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
@@ -119,10 +121,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
 		</td>
-		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
+		</td>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
 		</td>
 		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
@@ -133,6 +135,8 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
 		</td>
 	</tr>
