--- a/6/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/6/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 28, 2021 by pavroo
+Last update: November 2, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -115,6 +115,8 @@ Last update: October 28, 2021 by pavroo
 		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
 		</td>
 		<td><a href="aptus://videdi_youtubedl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTubeDL GUI</a>
+		</td>
+		<td><a href="aptus://videdi_yt-dlp" class="button1"><img src="images/youtube.svg" class="appicon"><br />YT-DLP</a>
 		</td>
 	</tr>
 </tbody>
