--- a/7/lib/sparky-aptus-appcenter/desktops.html
+++ b/7/lib/sparky-aptus-appcenter/desktops.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 24, 2021 by pavroo
+Last update: November 2, 2021 by pavroo
 -->
 	<head>
 		<title>Desktops | APTus AppCenter</title>
@@ -92,10 +92,12 @@ Last update: September 24, 2021 by pavroo
 		</td>
 		<td><a href="aptus://environment_sway" class="button1"><img src="images0/sway.png" class="appicon"><br />Sway</a>
 		</td>
-		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
+		<td><a href="aptus://environment_sugar" class="button1"><img src="images0/sugar.svg" class="appicon"><br />Sugar</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
+		</td>
 		<td><a href="aptus://environment_ukui" class="button1"><img src="images0/ukui.png" class="appicon"><br />UKUI</a>
 		</td>
 		<td><a href="aptus://environment_wmaker" class="button1"><img src="images0/wmaker.png" class="appicon"><br />WindowMaker</a>
