--- a/7/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/7/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 21, 2021 by pavroo
+Last update: November 2, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -88,14 +88,16 @@ Last update: September 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
 		</td>
+		<td><a href="aptus://netweb_microsoft-edge-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Microsoft Edge</a>
+		</td>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
 		</td>
 		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
 		</td>
-		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
+		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
 		</td>
 		<td><a href="aptus://netweb_next" class="button1"><img src="images/terminal.svg" class="appicon"><br />Next</a>
@@ -106,24 +108,26 @@ Last update: September 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
 		</td>
-		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
+		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
 		</td>
 		<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
 		</td>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
 		</td>
+		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
+		</td>
 		<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
 		</td>
 		<td><a href="aptus://netweb_waterfox-g3-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
