--- a/7/lib/sparky-aptus-appcenter/net-others.html
+++ b/7/lib/sparky-aptus-appcenter/net-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 29, 2023 by pavroo
+Last update: August 2, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Others | APTus AppCenter</title>
@@ -44,16 +44,20 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netoth_google-earth-pro-stable" class="button1"><img src="images/network.svg" class="appicon"><br />Google Earth</a>
 		</td>
+		<td><a href="aptus://netoth_httrack" class="button1"><img src="images/web-browser.svg" class="appicon"><br />HTTrack</a>
+		</td>
+		<td><a href="aptus://netoth_google-earth-pro-stable" class="button1"><img src="images/network.svg" class="appicon"><br />Google Earth</a>
+		</td>
 		<td><a href="aptus://netoth_megasync" class="button1"><img src="images/megasync.svg" class="appicon"><br />MegaSync</a>
 		</td>
 		<td><a href="aptus://netoth_onedrive" class="button1"><img src="images/network.svg" class="appicon"><br />OneDrive</a>
 		</td>
+	<tr>
+	</tr>
 		<td><a href="aptus://netoth_onionshare" class="button1"><img src="images/network.svg" class="appicon"><br />OnionShare</a>
 		</td>
 		<td><a href="aptus://netoth_spideroakone" class="button1"><img src="images/network.svg" class="appicon"><br />SpiderOakONE</a>
 		</td>
-	<tr>
-	</tr>
 		<td><a href="aptus://netoth_warpinator" class="button1"><img src="images/network.svg" class="appicon"><br />Warpinator</a>
 		</td>
 		<td><a href="aptus://netoth_wike" class="button1"><img src="images/comix.svg" class="appicon"><br />Wike</a>
