--- a/8/lib/sparky-aptus-appcenter/education.html
+++ b/8/lib/sparky-aptus-appcenter/education.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2022 by pavroo
+Last update: August 8, 2023 by pavroo
 -->
 	<head>
 		<title>Education/Science A-G | APTus AppCenter</title>
@@ -62,7 +62,7 @@ Last update: March 6, 2022 by pavroo
 		</td>
 		<td><a href="aptus://educat1_boats" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Boats</a>
 		</td>
-		<td><a href="aptus://educat1_cadabra" class="button1"><img src="images/edu.svg" class="appicon"><br />Cadabra</a>
+		<td><a href="aptus://educat1_cadabra2" class="button1"><img src="images/edu.svg" class="appicon"><br />Cadabra</a>
 		</td>
 		<td><a href="aptus://educat1_cantor" class="button1"><img src="images/glade.svg" class="appicon"><br />Cantor</a>
 		</td>
