--- a/8/lib/sparky-aptus-appcenter/net-communication.html
+++ b/8/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 24, 2023 by pavroo
+Last update: August 2, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -110,6 +110,8 @@ Last update: June 24, 2023 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_teams-for-linux" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams for Linux</a>
+		</td>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
 		</td>
 		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
@@ -120,10 +122,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
 		</td>
-		<td><a href="aptus://netcom_tokodon" class="button1"><img src="images/im.svg" class="appicon"><br />Tokodon</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_tokodon" class="button1"><img src="images/im.svg" class="appicon"><br />Tokodon</a>
+		</td>
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
 		</td>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
