--- a/8/lib/sparky-aptus-appcenter/system-encrypt.html
+++ b/8/lib/sparky-aptus-appcenter/system-encrypt.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 23, 2023 by pavroo
+Last update: June 1, 2024 by pavroo
 -->
 	<head>
 		<title>System -> Encrypt | APTus AppCenter</title>
@@ -55,6 +55,8 @@ Last update: June 23, 2023 by pavroo
 	</tr>
 	<tr>
 		<td><a href="aptus://sysenc_veracrypt" class="button1"><img src="images/keyring.svg" class="appicon"><br />VeraCrypt</a>
+		</td>
+		<td><a href="aptus://sysenc_veracrypt-console" class="button1"><img src="images/keyring.svg" class="appicon"><br />VeraCrypt console</a>
 		</td>
 		<td><a href="aptus://sysenc_zulucrypt-cli" class="button1"><img src="images/terminal.svg" class="appicon"><br />Zulucrypt CLI</a>
 		</td>
