--- a/8/lib/sparky-aptus-appcenter/system-virtual.html
+++ b/8/lib/sparky-aptus-appcenter/system-virtual.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 9, 2022 by pavroo
+Last update: June 1, 2024 by pavroo
 -->
 	<head>
 		<title>System -> Virtualization | APTus AppCenter</title>
@@ -64,8 +64,8 @@ Last update: August 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://sysvir_virtualbox" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
 		</td>
-		<td><a href="aptus://sysvir_vmware" class="button1"><img src="images/vmware.svg" class="appicon"><br />VMware</a>
-		</td>
+		<!--<td><a href="aptus://sysvir_vmware" class="button1"><img src="images/vmware.svg" class="appicon"><br />VMware</a>
+		</td>-->
 	</tr>
 </tbody>
 </div>
