--- a/8/lib/sparky-aptus-appcenter/system-virtual.html
+++ b/8/lib/sparky-aptus-appcenter/system-virtual.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 1, 2024 by pavroo
+Last update: September 16, 2024 by pavroo
 -->
 	<head>
 		<title>System -> Virtualization | APTus AppCenter</title>
@@ -62,7 +62,7 @@ Last update: June 1, 2024 by pavroo
 		</td>
 		<td><a href="aptus://sysvir_virt-viewer" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Viewer</a>
 		</td>
-		<td><a href="aptus://sysvir_virtualbox" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
+		<td><a href="aptus://sysvir_virtualbox-7.1" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
 		</td>
 		<!--<td><a href="aptus://sysvir_vmware" class="button1"><img src="images/vmware.svg" class="appicon"><br />VMware</a>
 		</td>-->
